# naive-bayes

./: .gitmodules  CMakeLists.txt
src/: classifier.cpp  classifier.h  helpers.h  main.cpp
